# discord-proceedings-bot-recognizer

./: Cargo.toml  README.md
src/: audio.rs  main.rs  parse_json.rs  serialize_to_csv.rs  whisper.rs
